# GazeboSimulation

./: .gitmodules  README.md
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py
catkin_ws/devel/include/terrasentia_sensors/: Euler_Base.h  FourWD.h  FullGPS.h  Motor.h  Quaternion_Base.h  TerraBattery.h  TerraEncoder.h  TerraGps.h  TerraImu.h  Terra_Orientation_Data.h  Terra_XYZ_Data.h  XYZ_Base.h
catkin_ws/devel/lib/pkgconfig/: geodesy.pc  geographic_msgs.pc  hector_gazebo_plugins.pc  hector_gazebo_thermal_camera.pc  hector_gazebo_worlds.pc  terrasentia_description.pc  terrasentia_models.pc  terrasentia_sensors.pc  unique_id.pc  uuid_msgs.pc
catkin_ws/src/terrasentia_description/: CMakeLists.txt
catkin_ws/src/terrasentia_description/config/: sensors_avid_config.urdf.xacro  sensors_default_config.urdf.xacro  sensors_ripe_config.urdf.xacro  sensors_test_config.urdf.xacro  sensors_tsv2_default_config.urdf.xacro  sensors_tsv3_default_config.urdf.xacro  ts0_default_config.urdf.xacro  ts0_ripe_config.urdf.xacro  tsv2_default_config.urdf.xacro  tsv3_default_config.urdf.xacro
catkin_ws/src/terrasentia_models/: CMakeLists.txt
catkin_ws/src/terrasentia_models/corn_variant_1/: model.sdf
catkin_ws/src/terrasentia_models/corn_variant_1/materials/scripts/: corn_variant_1.material
catkin_ws/src/terrasentia_models/corn_variant_1/meshes/: corn_variant_1.dae
catkin_ws/src/terrasentia_models/corn_variant_5/: model.config  model.sdf
catkin_ws/src/terrasentia_models/corn_variant_5/materials/scripts/: corn_variant_5.material
catkin_ws/src/terrasentia_models/corn_variant_5/materials/textures/: AG20brn2.tif.002.tif  AG20flw1.tif.001.tif  AG20frt2.tif.002.tif  AG20frt3.tif.004.tif  AG20lef1.tif.008.tif
catkin_ws/src/terrasentia_models/corn_variant_5/meshes/: corn_variant_5.dae
catkin_ws/src/terrasentia_models/heightmap_ground/: model.config  model.sdf
catkin_ws/src/terrasentia_models/leavesBase/: model.sdf
catkin_ws/src/terrasentia_models/leavesBase/materials/textures/backup/: AG20lef3.tif.006.tif
catkin_ws/src/terrasentia_models/leavesMid/: model.sdf
catkin_ws/src/terrasentia_models/sorghum_variant_0/: model.config  model.sdf
catkin_ws/src/terrasentia_models/sorghum_variant_0/materials/scripts/: sorghum_variant_0.material
catkin_ws/src/terrasentia_models/sorghum_variant_0/materials/textures/: AG16brn1.tif  AG16lef3.tif.001.tif
catkin_ws/src/terrasentia_models/sorghum_variant_0/meshes/: sorghum_variant_0.dae
catkin_ws/src/terrasentia_models/sorghum_variant_7/: model.config  model.sdf
catkin_ws/src/terrasentia_models/sorghum_variant_7/materials/scripts/: sorghum_variant_7.material
catkin_ws/src/terrasentia_models/sorghum_variant_7/materials/textures/: AG16brn2.tif  AG16lef1.tif.012.tif  AG16lef2.tif  AG16lef4.tif.007.tif
catkin_ws/src/terrasentia_models/sorghum_variant_7/materials/textures/backup/: AG16flw2.tif.001.tif
catkin_ws/src/terrasentia_models/sorghum_variant_7/meshes/: sorghum_variant_7.dae
catkin_ws/src/terrasentia_models/stem/: model.config  model.sdf
catkin_ws/src/terrasentia_models/stem/materials/textures/: AG20brn3.tif.002.tif  AG20lef2.tif.007.tif
catkin_ws/src/terrasentia_models/teste/: Rigged_Indoor_Plant_IK.3ds  Rigged_Indoor_Plant_IK.blend  Rigged_Indoor_Plant_IK.dae  Rigged_Indoor_Plant_IK.mtl  Rigged_Indoor_Plant_IK.x3d  Rigged_Indoor_Plant_IK_animation Baked.blend  Rigged_Indoor_Plant_IK_animation Baked.blend1  Rigged_Indoor_Plant_IK_animation test.blend  Rigged_Indoor_Plant_Lattice.blend
catkin_ws/src/terrasentia_models/tobacco_variant_2/: model.config  model.sdf
catkin_ws/src/terrasentia_models/tobacco_variant_2/materials/scripts/: tobacco_variant_2.material
catkin_ws/src/terrasentia_models/tobacco_variant_2/materials/textures/: AG13brn3.tif
catkin_ws/src/terrasentia_models/tobacco_variant_2/meshes/: tobacco_variant_2.dae
catkin_ws/src/terrasentia_models/tobacco_variant_8/: model.config  model.sdf
catkin_ws/src/terrasentia_models/tobacco_variant_8/materials/scripts/: tobacco_variant_8.material
catkin_ws/src/terrasentia_models/tobacco_variant_8/materials/textures/: AG13brn1.tif.003.tif  AG13flw1.tif  AG13flw2.tif.004.tif  AG13lef1.tif
catkin_ws/src/terrasentia_models/tobacco_variant_8/meshes/: tobacco_variant_8.dae
catkin_ws/src/terrasentia_models/winding_valley_heightmap/: model.sdf
catkin_ws/src/terrasentia_sensors/: CMakeLists.txt  SwarmbotsConfig.user.cmake
catkin_ws/src/terrasentia_sensors/config/lidar/: scan_filter.yaml
catkin_ws/src/terrasentia_sensors/include/gps/: terra_ros_gps_with_dropout.h
catkin_ws/src/terrasentia_sensors/include/motion/: terra_ros_imu.h  terra_skid_steering_with_encoder.h
catkin_ws/src/terrasentia_sensors/include/udp/: udp.h
catkin_ws/src/terrasentia_sensors/launch/: scan_filter.launch
catkin_ws/src/terrasentia_sensors/msg/: FourWD.msg
catkin_ws/src/terrasentia_sensors/plugins/: terra_camera_controller.cpp  terra_encoder.cpp  terra_ros_gps_with_dropout.cpp  terra_ros_imu.cpp  terra_sim_battery.cpp  terra_skid_steering_with_encoder.cpp
catkin_ws/src/terrasentia_sensors/src/: emulate_rc_control_node.cpp  ros_rc_controller.cpp  terra_sensor_relay.cpp  terra_sensor_relay_node.cpp  trajectory_grabber.cpp  trajectory_grabber_node.cpp  udp.cpp
catkin_ws/src/terrasentia_sensors/urdf/: all_sensors.urdf.xacro  asus_xtion_pro.urdf.xacro  axis_m5013.urdf.xacro  axis_p5512.urdf.xacro  elp_usb_camera.urdf.xacro  fotonic_e.urdf.xacro  gps-with-periodicnoisebox.urdf.xacro  gps.urdf.xacro  gps_with_mast.urdf.xacro  hdl_32e.urdf.xacro  hokuyo3d.urdf.xacro  hokuyo_urg04lx.urdf.xacro  hokuyo_ust10lx.urdf.xacro  hokuyo_utm30lx.urdf.xacro  imu.urdf.xacro  imu_hector_plugin.urdf.xacro  imu_terra_plugin.urdf.xacro  kinect.urdf.xacro  kinectv2.urdf.xacro  orbbec_astra.urdf.xacro  rplidar.urdf.xacro  sick_s300.urdf.xacro  sick_s3000.urdf.xacro  sick_tim571.urdf.xacro  sonar.urdf.xacro  test_vlp_16.urdf.xacro  test_vlp_16_support.urdf.xacro  ueye_cp_gige.urdf.xacro  vlp_16.urdf.xacro
catkin_ws/src/terrasentia_sensors/urdf/includes/gpu_fix/: GpuLaser.cc  GpuRaySensor.cc
(+68 files in other folders)
